--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <div class="footer-maim">
       <div class="footer-container">
         <div class="footer-link">
-          <a href="#">&copy Md Shobuj</a>
+          <a href="#">&copy Shobuj</a>
           <a href="#">Fullstack Developer</a>
           <a href="#">UI Designer</a>
           <a href="#">Data Analyst</a>
