--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal portfolio website</title>
+    <!-- <link rel="stylesheet" href="media.css" /> -->
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -21,7 +22,7 @@
           <ul class="nav-item">
             <li class="nav-list"><a href="#home" class="nav-link">Home</a></li>
             <li class="nav-list">
-              <a href="#about-me" class="nav-link">About me</a>
+              <a href="#about-me" class="nav-link">About me !</a>
             </li>
             <li class="nav-list">
               <a href="#projects" class="nav-link">Projects</a>
@@ -30,6 +31,7 @@
               <a href="#contact" class="nav-link">Contact</a>
             </li>
           </ul>
+          <i class="fa-solid fa-bars nav-bar"></i>
         </nav>
 
         <div class="slider-main">
